# pjpd

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_API.md  SPEC.md  VS_LINEAR.md  coverage.cmd  manifest.json  pjpd.py  projectmcp.toml  pyproject.toml
pjpd/: epics.txt  ideas.txt  pd_analysis.txt  pjpdignore  tasks.txt
resources/: intro.txt
src/: config.py  mcp_wrapper.py  validation.py
src/ideas/: __init__.py  idea.py  ideas.py
src/projects/: __init__.py  project.py  projects.py  task.py
src/textrec/: __init__.py  record_id.py  text_records.py
tests/: conftest.py  test_config.py  test_import_all.py  test_pjpd_subdirectory.py  test_validation.py
tests/ideas/: __init__.py  test_idea_timestamps.py  test_ideas_tools.py  test_mark_idea_done_preserves_score.py
tests/projects/: __init__.py  test_done_file_split.py  test_mark_done_preserves_priority.py  test_project_atomic_write.py  test_project_creation_and_saving.py  test_reprioritize_task_tool.py  test_task_timestamps.py  test_update_task_tool.py
tests/textrec/: __init__.py  test_record_id.py  test_text_records_write_atomic.py
